# Trickster_Pi

./: MANIFEST.in  MODULES.md  PACKAGING.md  README.md  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
src/: __init__.py  api_routes.py  audio_manager.py  config.py  gpio_controller.py  main.py  trickster.py  trickster_controller.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_audio_manager.py  test_config.py  test_gpio_controller.py  test_hardware.py  test_main.py  test_trickster_controller.py
