[project]
name = "Halloween"
version = "0.0.1"
authors = [
  { name="Jordan Marinov", email="jaisor@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jaisor/PiTrickster"
Issues = "https://github.com/jaisor/PiTrickster/issues"
