[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True

[options.extras_require]
dev = 
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0

docs = 
    sphinx>=6.0.0
    sphinx-rtd-theme>=1.3.0

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    build,
    dist,
    *.egg-info,
    src/trickster_legacy.py
